rnsc/test_data/rns_integration/error/parser/inner_directive/access_flag_as_name.rns
; Tests that an access flag used as inner class name is handled.
; Expected: warning about reserved-like identifier, class name becomes the flag name

.class public MyClass
.super java/lang/Object

.inner static
    .super java/lang/Object
.inner_end

.class_end
